getInvoicesByCustomerId